Added onPlayerKillsPlayer Event for Beserker and removed disable()